--- a/index.html
+++ b/index.html
@@ -649,9 +649,10 @@ WordPress</em></p>
       <div class="col-lg-3 col-md-6">
         <h6 class="fw-semibold text-light mb-3">Connect</h6>
         <div class="d-flex gap-3">
-          <a href="#" class="text-light fs-5"><i class="bi bi-linkedin"></i></a>
-          <a href="#" class="text-light fs-5"><i class="bi bi-github"></i></a>
-          <a href="#" class="text-light fs-5"><i class="bi bi-envelope"></i></a>
+        <a href="https://www.facebook.com/share/1CmoGF6U2c/" class="facebook"><i class="bi bi-facebook"></i></a>
+      <a href="https://www.instagram.com/_ahmad.ramdan_?igsh=Nm16NjJzdTE3czBh" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/ahmad-ramadan-860a35226?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        
         </div>
       </div>
 
