--- a/index.html
+++ b/index.html
@@ -133,7 +133,6 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19 March 2003</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.ram.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+961 81 803 524</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lebanon, Tyre</span></li>
                 </ul>
@@ -522,7 +521,7 @@ WordPress</em></p>
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p>A108 Adam Street,Lebanon, TY 110002</p>
+                  <p>Lebanon, TYRE </p>
                 </div>
               </div><!-- End Info Item -->
 
