--- a/index.html
+++ b/index.html
@@ -546,7 +546,8 @@ WordPress</em></p>
           </div>
 
           <div class="col-lg-7">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form  action="https://formspree.io/f/xzdddlyn"
+  method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
