--- a/index.html
+++ b/index.html
@@ -545,9 +545,10 @@ WordPress</em></p>
             </div>
           </div>
 
+          
           <div class="col-lg-7">
-            <form  action="https://formspree.io/f/xzdddlyn"
-  method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="https://formspree.io/f/xzdddlyn"
+  method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -572,7 +573,6 @@ WordPress</em></p>
 
                 <div class="col-md-12 text-center">
                   <div class="loading">Loading</div>
-                  <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
 
                   <button type="submit">Send Message</button>
@@ -581,6 +581,7 @@ WordPress</em></p>
               </div>
             </form>
           </div><!-- End Contact Form -->
+
 
         </div>
 
