--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ WordPress</em></p>
                   <h4>App 1</h4>
                   <p>Salon Management & Booking System</p>
                   <a href="assets/img/portfolio/app-1.png" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details_0.html?portfolio-details-1" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-details_0.html?portfolio-details-salon" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -629,17 +629,17 @@ WordPress</em></p>
         <h6 class="fw-semibold text-light mb-3">Projects</h6>
         <ul class="list-unstyled">
           <li class="mb-2">
-            <a href="portfolio-details.html?portfolio-details-1" class="text-secondary text-decoration-none">
+            <a href="portfolio-details_0.html?portfolio-details-salon" class="text-secondary text-decoration-none">
               Beauty Salon System
             </a>
           </li>
           <li class="mb-2">
-            <a href="portfolio-details.html?portfolio-details-ecommerce" class="text-secondary text-decoration-none">
+            <a href="portfolio-details_1.html?portfolio-details-ecommerce" class="text-secondary text-decoration-none">
               E-commerce Platform
             </a>
           </li>
           <li>
-            <a href="portfolio-details.html?portfolio-details-streaming" class="text-secondary text-decoration-none">
+            <a href="portfolio-details_2.html?portfolio-details-streaming" class="text-secondary text-decoration-none">
               Streaming Platform
             </a>
           </li>
