--- a/portfolio-details_0.html
+++ b/portfolio-details_0.html
@@ -85,7 +85,7 @@
     </div><!-- End Page Title -->
 
     <!-- Portfolio Details Section -->
-    <section id="portfolio-details-1" class="portfolio-details section">
+    <section id="portfolio-details-salon" class="portfolio-details section">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
